--- a/Year 2 Fall/ACCT1101/pages/analyze.tex
+++ b/Year 2 Fall/ACCT1101/pages/analyze.tex
@@ -160,7 +160,7 @@ Involves \textit{debt}.
 
 \subsubsection{Market ratios}
 
-Involves \textbf{Market price} (per share).
+Involves \textbf{Market price} (per share \textbf{outstanding}).
 
 \begin{table}[H]
     \centering
