--- a/Year 2 Fall/ACCT1101/pages/concepts.tex
+++ b/Year 2 Fall/ACCT1101/pages/concepts.tex
@@ -30,15 +30,13 @@
 
     \begin{tabular}{|p{0.3\textwidth}|p{0.5\textwidth}|}
         \hline
-        \textbf{Likelihood}      & \textbf{Treatment}     \\
+        \textbf{Likelihood}             & \textbf{Treatment}     \\
         \hline
-        Probable and estimable   & Record as liability    \\
+        Probable \textbf{and estimable} & Record as liability    \\
         \hline
-        Probable but inestimable & Disclose in notes only \\
+        Reasonably possible             & Disclose in notes only \\
         \hline
-        Reasonably possible      & Disclose in notes only \\
-        \hline
-        Remote                   & No disclosure needed   \\
+        Remote                          & No disclosure needed   \\
         \hline
     \end{tabular}
 \end{theorem}
