--- a/Year 2 Fall/ACCT1101/pages/record.tex
+++ b/Year 2 Fall/ACCT1101/pages/record.tex
@@ -323,7 +323,7 @@ The following are the categorization of stocks:
 
     \tcblower
 
-    "Preferred stock: \$20 par value, 6\% rate, 1000 shares. Common stock: \$10 par value, 5000 shares." $\implies$ PD = $20 \times 1000 \times 0.1 = 2000$
+    "Preferred stock: \$20 par value, 1\% rate, 1000 shares. Common stock: \$10 par value, 5000 shares." $\implies$ PD = $20 \times 1000 \times 0.1 = 2000$
 
     Consider a issurance of \$3000 dividends, for \textit{current} preference:
 
@@ -333,9 +333,9 @@ The following are the categorization of stocks:
 
     Consider a issurance of \$10000 dividends, for \textit{cummulative} preference, dividends in arrears for 2 years:
 
-    $\text{PD} = 2000 + 2000 * 2 = 4000$ (first 2000 is the current year's),
+    $\text{PD} = 2000 + 2000 * 2 = 6000$ (first 2000 is the current year's),
 
-    $\text{CD} = 10000 - \text{PD} = 6000$
+    $\text{CD} = 10000 - \text{PD} = 4000$
 
 
 \end{theorem}
@@ -646,6 +646,8 @@ The above example assumes that the \colorbox{yellow}{cost of inventory} is the s
         $\quad$ Cash     &             & \$23        \\
     \end{tabular}
 \end{definition}
+
+\label{subsec:equipments}
 
 \begin{theorem}
     {Reporting maintenance and improvements of equipment}
