--- a/Year 2 Fall/COMP2119/pages/analysis.tex
+++ b/Year 2 Fall/COMP2119/pages/analysis.tex
@@ -71,7 +71,7 @@ However, different operations have varying efficiencies, so instead we consider 
     We use the likeness of $g(n)$ to describe the complexity of $T(n)$. The following gives the common growth rate functions (increasing order of growth):
 
     \[
-        1 < \sqrt{n} < \log n < n < n\log n < n^2 < n^3 < 2^n < n! < n^n
+        1 < \log n < \sqrt{n} < n < n\log n < n^2 < n^3 < 2^n < n! < n^n
     \]
 
     Note that the higher the growth rate, the more complex the algorithm.
