--- a/Year 2 Fall/IIMT2601/IIMT2601 Notes.tex
+++ b/Year 2 Fall/IIMT2601/IIMT2601 Notes.tex
@@ -19,6 +19,7 @@
 % ------------------------------------ %
 
 \newpage
+\hypertarget{toc}{}
 \tableofcontents
 
 Note: Mid-term from chapter 1-3, finals from chapter 4 onwards. Might include prerequisite knowledge.
@@ -35,5 +36,6 @@ Note: Mid-term from chapter 1-3, finals from chapter 4 onwards. Might include pr
 \input{pages/econ}
 \input{pages/social}
 \input{pages/data}
+\input{pages/case}
 
 \end{document}
