--- a/Year 2 Fall/IIMT2601/pages/data.tex
+++ b/Year 2 Fall/IIMT2601/pages/data.tex
@@ -5,10 +5,10 @@
 \begin{definition}
     {DIKW Pyramid}
     \begin{itemize}
-        \item Data: raw facts
-        \item Information: data with context
-        \item Knowledge: information with understanding
-        \item Wisdom: knowledge with experience
+        \item \textbf{D}ata: raw facts
+        \item \textbf{I}nformation: data with context
+        \item \textbf{K}nowledge: information with understanding
+        \item \textbf{W}isdom: knowledge with experience
     \end{itemize}
 \end{definition}
 
@@ -43,7 +43,7 @@ Steps for conducting business analytics:
         \item Storage - Databases
         \item Visualization - Excel
         \item Processing - Excel
-        \item Reporting - OLAP / Dashbaords
+        \item Reporting - OLAP / Dashboards
     \end{itemize}
     Or other general purpose tools like Python
 \end{theorem}
