--- a/Year 2 Fall/IIMT2601/pages/model.tex
+++ b/Year 2 Fall/IIMT2601/pages/model.tex
@@ -72,10 +72,10 @@ A business model outlines how certain objectives are achieved, such as:
 \begin{theorem}
     {Porter's Five Forces of Competition}
     \begin{enumerate}
-        \item Rivalry among existing firms (no. of competitors)
-        \item Threat of new entrants (entry barriers)
-        \item Bargaining power of buyers (no. of buyers)
-        \item Bargaining power of suppliers (no. of suppliers)
-        \item Threat of substitutes (no. of alternatives)
+        \item Rivalry among existing firms (no. of competitors $\uparrow$ $\implies$ competition $\uparrow$)
+        \item Threat of new entrants (entry barriers $\uparrow$ $\implies$ competition $\downarrow$)
+        \item Bargaining power of suppliers (no. of suppliers $\uparrow$ $\implies$ dependency $\downarrow$)
+        \item Bargaining power of buyers (supply $\uparrow$ power of buyers $\uparrow$)
+        \item Threat of substitutes (no. of alternatives $\uparrow$ $\implies$ competition $\uparrow$)
     \end{enumerate}
 \end{theorem}
