--- a/Year 2 Fall/IIMT2601/pages/social.tex
+++ b/Year 2 Fall/IIMT2601/pages/social.tex
@@ -1,25 +1,57 @@
-\section{Social media}
+\section{Social media and networks}
 
-Social media addresses the fundamental need to connect with the world. They have \textbf{strong network effects}, and \textbf{high switching cost}. People spend hours on average per day on social media, which makes it a great place for advertisers to reach their target audience.
+Social networks addresses the fundamental need to connect with the world. They have \textbf{strong network effects}, and \textbf{high switching cost}.
+
+\begin{knBox}
+    {Social networks vs. social media}
+    Fundamentally, Social networks mainly encourage users to \textbf{connect with each other}. Social media mainly encourage users to \textbf{share content}.
+    \begin{itemize}
+        \item Social networks: Facebook, LinkedIn, Twitter
+        \item Social media: Instagram, TikTok, YouTube
+    \end{itemize}
+\end{knBox}
+
+People spend hours on average per day on social media, which makes it a great place for advertisers to reach their target audience.
 
 \subsection{Social marketing}
 
-The key point in social marketing is identifying customers, understanding their behavior, and measuring results.
-
-After the content is created, it is important to \textbf{engage} with the audience. This can be done by asking questions, and responding to comments.
+The key point in social marketing is identifying customers, understanding their behavior, and measuring results. After creating content, it is important to \textbf{engage} with the audience. This can be done by asking questions, and responding to comments.
 
 Marketers can use analytic tools to measure the effectiveness of their social media campaigns.
 
-Some advantages:
-\begin{itemize}
-    \item Higher reach
-    \item Better user tracking
-    \item Target audience
-\end{itemize}
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|}
+        \hline
+        \textbf{Advantages}  & \textbf{Disadvantages} \\
+        \hline
+        Higher reach         & Negative feedback      \\
+        Better user tracking & Mistakes spread fast   \\
+        Target audience      & Biased feedback        \\
+        User engagement      &                        \\
+        \hline
+    \end{tabular}
+    \caption{Advantages and Disadvantages of Social Media Marketing}
+    \label{tab:advantages_disadvantages}
+\end{table}
 
-Some disadvantages:
-\begin{itemize}
-    \item Negative feedback
-    \item Mistakes spread fast
-    \item Biased feedback
-\end{itemize}
+\begin{definition}
+    {Metrics}
+    Indicating brand awareness:
+    \begin{itemize}
+        \item Cost per impressions (CPI / CPM): The cost for displaying an ad to 1000 people
+    \end{itemize}
+    Indicating customer retention:
+    \begin{itemize}
+        \item Customer retention rate: The percentage of customers that return
+        \item Average revenue per purchase
+        \item Average units per purchase
+    \end{itemize}
+    Indicating lead generation:
+    \begin{itemize}
+        \item Click-through rate (CTR): The percentage of people who click on an ad
+        \item Conversion rate (CR): The percentage of people who take a desired action
+        \item Cost per Click (CPC)
+        \item Cost per Acquisition (CPA): The cost to acquire a customer
+    \end{itemize}
+\end{definition}
