--- a/Year 2 Fall/IIMT2601/pages/econ.tex
+++ b/Year 2 Fall/IIMT2601/pages/econ.tex
@@ -12,11 +12,27 @@
 \end{definition}
 
 \begin{knBox}
-    {O2O - Online to Offline}
+    {O2O - Online to Offline / OMO - Online Merged Offline}
     Purchase for items or services online, but consume offline. Typically involves a brick-and-mortar store.
 
     \textit{Examples: Openrice, klook, uber}
 \end{knBox}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|}
+        \hline
+        \textbf{Advantages}      & \textbf{Disadvantages}       \\
+        \hline
+        High accessibility       & Lack of physical experience  \\
+        Convenience              & Delivery delays              \\
+        Cost efficiency          & security concerns            \\
+        Flexible business models & limited personal interaction \\
+        \hline
+    \end{tabular}
+    \caption{Advantages and Disadvantages of E-commerce}
+    \label{tab:econ_ad}
+\end{table}
 
 \subsection{Platform economy}
 \label{subsec:platform}
@@ -24,7 +40,8 @@
 Platforms are sensitive to the \hyperref[def:network]{\textbf{network effect}}. The more users on the platform, the more valuable it is. This allows the platform to have a significant advantage, even when innovative entrants have better products.
 
 \begin{knBox}
-    {Improve user retention}
+    {Increase switching costs}
+    Increasing switching costs will encourage users to stay on the platform. This can be done through:
     \begin{itemize}
         \item \textbf{Exclusivity}: Products cannot be accessed in other providers.
         \item \textbf{Sunk cost}: Rewards from time and effort spent on platform
