--- a/Year 2 Fall/IIMT2601/pages/social.tex
+++ b/Year 2 Fall/IIMT2601/pages/social.tex
@@ -47,7 +47,7 @@ Marketers can use analytic tools to measure the effectiveness of their social me
         \item Average revenue per purchase
         \item Average units per purchase
     \end{itemize}
-    Indicating lead generation:
+    Indicating lead (interest) generation:
     \begin{itemize}
         \item Click-through rate (CTR): The percentage of people who click on an ad
         \item Conversion rate (CR): The percentage of people who take a desired action
