--- a/Year 2 Spring/COMP2121/Assignments/268218-2121-3.tex
+++ b/Year 2 Spring/COMP2121/Assignments/268218-2121-3.tex
@@ -164,22 +164,30 @@
               \end{aligned}
           \]
     \item
-          The sequence of numbers can be represented as \( (1, 2, \dots, n, n+1, \dots, 2n) \). We can group each element indexed $i$ with $i+n$ to identify the pairs of numbers which satisfy $|c_i - c_{i+1}| = n$.
+          The sequence of numbers can be represented as \( (1, 2, \dots, n, n+1, \dots, 2n) \). The valid groups are \( (1, n+1), (2, n+2), \dots, (n, 2n) \).
 
-          Hence, the total number of groups is $n$.
+          As one of the groups must exist, by inclusion-exclusion:
+          \begin{align*}
+              \text{Pleasant}   & = \sum_{k=1}^{n}(-1)^{k+1}\binom{n}{k}2^{k}(2n-k)! \\
+              \text{Unpleasant} & = (2n)! - \text{Pleasant}                          \\
+                                & =  \sum_{k=0}^{n}(-1)^{k}\binom{n}{k}2^{k}(2n-k)!
+          \end{align*}
 
-          Numbers in each group must be adjacent to each other. Hence, there are $(2n-1)! \times 2$ ways to pleasantly arrange the numbers of the sequence in the way of one of the groups.
+          To show the relative sizes of $(2n)!$ and number of pleasant combinations, we have:
+          \begin{align*}
+              \frac{\text{Unpleasant}}{(2n)!} & = \sum_{k=0}^{n}(-1)^{k}\binom{n}{k}2^{k}\frac{(2n-k)!}{(2n)!}              \\
+                                              & = \sum_{k=0}^{n}(-1)^{k}\binom{n}{k}2^{k}\frac{1}{(2n)(2n-1)\ldots(2n-k+1)}
+          \end{align*}
+          To simplfy the expression, replace the terms $\binom{n}{k} \to \frac{n^k}{k!},\quad (2n)(2n-1)\ldots(2n-k+1) \to (2n)^k$, where the replaced expression is always \textbf{less than or equal to} the replaced expression (thus the sum is always \textbf{less than or equal to} the sum of the replaced expression):
+          \begin{align*}
+               & \sum_{k=0}^{n}(-1)^{k}\frac{n^k}{k!}2^{k}\frac{1}{(2n)^k}                     \\
+               & = \sum_{k=0}^{n}(-1)^{k}\frac{1}{k!}                                          \\
+               & = e^{-1}\quad(\text{Taylor expansion: } e^x=\sum_{k=0}^\infty\frac{x^k}{k!}.) \\
+               & \approx 0.3679
+          \end{align*}
+          Hence, the number of unpleasant combinations must be at most $37\%$ of the total number of combinations.
 
-          To find the number of pleasant arrangements, we must first find the number of common permutations for each group. (for example, $n=2, 4,2,3,1$ satisfies both groups $(4,2),(3,1)$.)
-
-          This is given by $(2n-2)!\times2\times2=4(2n-2)!$ for each group (as we locked in 2 groups ($-2$), 2 ways to arrange first group, 2 ways to arrange second group).
-
-          Hence, total number of pleasant arrangements is:
-          \[
-              (2n-1)! \times 2 \times n - 4(2n-2)! \times (n-1) > \frac{1}{2} \times (2n)!,\quad n \geq 1
-          \]
-          The relative size can be identified by plotting the functions. Hence, the number of pleasant arrangements is at least half of all possible arrangements.
-
+          Therefore, at least half of all possible combinations are pleasant.
 \end{enumerate}
 
 \newpage
@@ -213,13 +221,17 @@
 
           Denote original permutation be $A=(a_1,a_2,\ldots,a_{20})$. In the new permutation, we must avoid pairs of $(a_i,a_{i+1})$, where there are a total of $19$ pairs ($a_{20}$ makes no pairs).
 
-          Considering a general problem, the total number of ways to arrange $n$ players without restrictions is $n!$.
+          This is another inclusion exclusion problem:
 
-          Subtract the invalid arrangements. There are $n-1$ pairs, and treating a pair as one entity, there are $(n-1)!$ permutations. This gives $(n-1)(n-1)!$ permutations.
+          Considering a general problem, the total number of ways to arrange $n$ players without restrictions is $n!$
 
-          However, in those permutations, there might be cases where two pairs exists in the same permutation, and we would've double counted them. Hence, we have to add $\binom{n-1}{2}(n-2)!$ permutations.
+          \textbf{OVERCOUNTED}: Subtract the invalid arrangements. There are $n-1$ pairs, and treating a pair as one entity (same right hand neighbour), there are $(n-1)!$ permutations. This gives $(n-1)(n-1)!$ permutations.
 
-          In then those permutations, there might be cases where three pairs exists in the same permutation, and we would've triple counted them. Hence, we have to subtract $\binom{n-1}{3}(n-3)!$ permutations.
+          \textbf{UNDERCOUNTED}: However, in those permutations, there might be cases where two pairs exists in the same permutation, and we would've double counted them. There are 19 unpleasant adjacencies, and choosing two, we have to add back $\binom{n-1}{2}(n-2)!$ permutations.
+
+          \textbf{OVERCOUNTED}: We added back extra permutations. Choosing three, we have to subtract $\binom{n-1}{3}(n-3)!$ permutations.
+
+          We can observe a pattern here: each time we adjust for overcount, we would undercount, which would overcount etc. etc.
 
           Hence, the expression of the solution is:
 
@@ -274,7 +286,7 @@
 \subsection*{Solutions to question 4}
 
 \begin{enumerate}[label=(\alph*)]
-    \item For two events to be independent, $P(A \cup B) = P(A) \times P(B)$. Let $a,b,c$ be the 3 numbers chosen randomly from the set, where $a>b>c$, the following are all possible permutations:
+    \item For two events to be independent, $P(A \cap B) = P(A) \times P(B)$. Let $a,b,c$ be the 3 numbers chosen randomly from the set, where $a>b>c$, the following are all possible permutations:
           \[
               (p_1,p_2,p_3) := (a,b,c),\ (a,c,b),\ (b,a,c),\ (b,c,a),\ (c,a,b),\ (c,b,a)
           \]\
